<resources>
    <string name="app_name">ValpoTours</string>

    <!--Registro-->
    <string name="welcome">Bienvenido</string>
    <string name="full_name">Escribe tu nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="register">Registrarse</string>
    <string name="already_have_an_account">¿ya tienes una cuenta?</string>
    <string name="sign_in">iniciar sesión</string>
    <string name="please_complete_all_fields">Por favor, completa todos los campos</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="Something_went_wrong_while_updating_the_profile">Algo ha salido mal al actualizar el perfil</string>
    <string name="enter_a_valid_email_and_a_password_of_at_least_6_characters">Ingrese un correo válido y una contraseña de al menos 6 caraceteres</string>
    <string name="data_updated_successfully">Perfil Actualizado correctamente</string>
    <string name="verification_email_sent">Correo de verificación enviado</string>

    <!--cambiar datos-->
    <string name="titlePerfilChange">Editar Perfil</string>
    <string name="Something_went_wrong_while_updating_email">Error al actualizar el correo electrónico</string>
    <string name="current_password">Contraseña Actual</string>
    <string name="Something_went_wrong_while_updating_password">Error al actualizar la contraseña</string>

    <!-- Login-->
    <string name="forgot_password">Olvido su contraseña</string>
    <string name="login">Ingresar</string>
    <string name="next_without_account">Continuar Sin registrar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="singup">¿No tiene una cuenta?,</string>
    <string name="enter_email">Ingrese correo</string>
    <string name="reset_email_sent">Correo de restablecimiento enviado</string>
    <string name="invalid_email">Correo inválido</string>
    <string name="enter_email_and_password">Ingrese correo y contraseña</string>
    <string name="user_not_authenticated">Usuario no autenticado</string>
    <string name="login_failed_Please_verify_your_credentials">Error al iniciar sesión. Por favor, verifica tus credenciales</string>

    <!-- Configuración -->
    <string name="settings">Configuración</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="language">Idioma</string>
    <string name="version">Version</string>

    <string name="change_data_perfile">Cambiar datos de perfil</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="actualizar_perfil">Actualizar perfil</string>

    <!-- Detalles del Lugar-->
    <string name="detail">Detalle</string>
    <string name="value">Valorar</string>
    <string name="description">Descripción</string>
    <string name="publicar">publicar</string>

    <string name="how_to_get">Como llegar</string>
    <string name="add_to_tour">Agregar a recorrido</string>
    <string name="place_in_list">Lugar ya esta agregado</string>

    <!-- Editar-->
    <string name="add_comment">Agregar comentario aqui</string>
    <string name="edit">Editar</string>
    <!-- hasta aqui -->

    <string name="edit_password">¿Cambiar contraseña?</string>
    <string name="edit_photo">¿Cambiar foto de perfil?</string>
    <string name="see_tours">Ver recorrido</string>
    <string name="submit">Ver recorrido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!--Recorrido-->
    <string name="route">Recorrido</string>
    <string name="start_route">Empezar recorrido</string>
    <string name="delete">Eliminar</string>
    
</resources>