<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco2"
    tools:context=".LoginActivity"
    tools:ignore="ExtraText">

    <!-- Primer ImageView -->
    <ImageView
        android:id="@+id/firstImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circulo_ezquina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Segundo ImageView -->
    <ImageView
        android:id="@+id/secondImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circulo_ezquina2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- TextView de Bienvenida -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondImageView" />

    <!-- ImageView del Logo -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="165dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        app:srcCompat="@drawable/logo" />




    <!-- EditText para Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:background="@drawable/style_etbg"
        android:gravity="center"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"/>

    <!-- EditText para Contraseña -->

    <!-- TextView para Olvidé mi Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_etbg"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:onClick="forgotPassword"
        android:paddingTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/celeste_letra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <!-- TextView para Siguiente -->
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:onClick="nextWithout"
        android:paddingTop="10dp"
        android:text="@string/next_without_account"
        android:textColor="@color/celeste_letra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <!-- Botón de Login -->

    <!-- TextView para Signup -->
    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="325dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/celeste_letra"
        android:text="@string/login"
        android:textColor="@color/blanco"
        android:textSize="23dp"
        android:onClick="login"
        app:layout_constraintTop_toBottomOf="@id/tvContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/btnIngresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="10dp"
        android:text="@string/singup"
        android:textColor="@color/negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIngresar" />


    <TextView
        android:id="@+id/tvRegister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:onClick="goRegister"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textColor="@color/celeste_letra"
        app:layout_constraintStart_toEndOf="@id/tvRegister"
        app:layout_constraintTop_toBottomOf="@id/btnIngresar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

