<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:id="@+id/main"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circulo_ezquina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circulo_ezquina2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="237dp"
        android:text="@string/settings"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLanguage"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings">

        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/blanco"
            android:maxLines="1"
            android:text="@string/language"
            android:textAllCaps="true"
            android:singleLine="true"
            android:textColor="@color/negro" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvVersion"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvLanguage">

        <Button
            android:id="@+id/btnVersion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/blanco"
            android:inputType="textEmailAddress"
            android:text="@string/version"
            android:textAllCaps="true"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/negro" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/BtnLogout"
        android:layout_width="325dp"
        android:layout_height="62dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/celeste_letra"
        android:onClick="btnlogout"
        android:text="@string/log_out"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/main_menu"
        />



</androidx.constraintlayout.widget.ConstraintLayout>